# Scribe

./: package-lock.json  package.json  pyproject.toml
app/: page.tsx
components/: BodyTab.tsx  ConclusionTab.tsx  Display.tsx  ResumeTab.tsx  Tabs.tsx  TitleTab.tsx
scribe/: __init__.py  model.py  questions.txt
